--- a/20251023.md
+++ b/20251023.md
@@ -20,8 +20,8 @@ import { CarResponse, Car, CarEntity } from "../types";
 export const getCars = async (): Promise<CarResponse[]> => {
     const token = sessionStorage.getItem('jwt');
 
-    // 세션 스토리지 상에 'Bearer '가 포함되어있습니다. 근데 저희가 Postman에서 요청 날릴 때 'Bearer ' 부분을 빼놓고 붙여넣기 했었던 것을 떠올려서
-    // 프론트 엔드 상에서 'Bearer '를 제거하고, 그걸 기준으로 요청을 날렸습니다.
+    // 세션 스토리지 상에 'Bearer'가 포함되어있습니다. 근데 저희가 Postman에서 요청 날릴 때 'Bearer' 부분을 빼놓고 붙여넣기 했었던 것을 떠올려서.
+    // 프론트 엔드 상에서 'Bearer'를 제거하고, 그걸 기준으로 요청을 날렸습니다.
     const rawToken = token?.replace('Bearer ', '');
     const response = await axios.get(`${import.meta.env.VITE_API_URL}/api/cars`, {
         headers: { 'Authorization': `${rawToken}` }
